## 1.0.1 ### Added - Ajax support to textAreaWysiwyg component - Multiple textAreaWysiwyg support in same page - Disable textAreaWysiwyg with aDisable attribute - Fix files name

--- a/src/main/resources/META-INF/resources/aquiles/body.xhtml
+++ b/src/main/resources/META-INF/resources/aquiles/body.xhtml
@@ -224,8 +224,8 @@
         <!-- jquery confirm -->
         <h:outputScript name="third/plugins/jquery-confirm/jquery-confirm.min.js"/>
 
-        <!-- aquilesnote wysiwyg -->
-        <h:outputScript name="third/plugins/aquilesnote/aquilesnote.js"/>
+        <!-- summernote wysiwyg -->
+        <h:outputScript name="third/plugins/summernote/summernote.js"/>
 
         <!-- AdminLTE App -->
         <h:outputScript name="third/dist/js/app.min.js"/>
