--- a/src/main/resources/META-INF/resources/aquiles/head.xhtml
+++ b/src/main/resources/META-INF/resources/aquiles/head.xhtml
@@ -56,8 +56,8 @@
         <!-- Datepicker -->
         <h:outputStylesheet name="third/plugins/bootstrap-datepicker-1.6.4/css/bootstrap-datepicker.min.css"/>
 
-        <!-- aquilesnote wysiwyg -->
-        <h:outputStylesheet name="third/plugins/aquilesnote/aquilesnote.css"/>
+        <!-- summernote wysiwyg -->
+        <h:outputStylesheet name="third/plugins/summernote/summernote.css"/>
 
         <h:outputStylesheet name="third/dist/css/skins/skin-#{utilMB.colorTemplate}.css"/>
         <h:outputStylesheet name="css/aquiles-core-#{utilMB.colorTemplate}.css"/>
