## 1.1.0 ### Added - Created inputDateTime component ### Changed - Changed inputTextArea component to use default requiredMessage when not informed

--- a/src/main/resources/META-INF/resources/aquiles/body.xhtml
+++ b/src/main/resources/META-INF/resources/aquiles/body.xhtml
@@ -227,6 +227,10 @@
         <!-- summernote wysiwyg -->
         <h:outputScript name="third/plugins/summernote/summernote.js"/>
 
+        <!-- bootstrap-datetimepicker -->
+        <h:outputScript name="third/plugins/bootstrap-datetimepicker/moment-with-locales.min.js" />
+        <h:outputScript name="third/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js" />
+
         <!-- AdminLTE App -->
         <h:outputScript name="third/dist/js/app.min.js"/>
         <h:outputScript name="third/dist/js/jquery.mask.min.js"/>
