--- a/src/main/resources/META-INF/resources/aquiles/head.xhtml
+++ b/src/main/resources/META-INF/resources/aquiles/head.xhtml
@@ -59,6 +59,9 @@
         <!-- summernote wysiwyg -->
         <h:outputStylesheet name="third/plugins/summernote/summernote.css"/>
 
+        <!-- bootstrap-datetimepicker -->
+        <h:outputStylesheet name="third/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css" />
+
         <h:outputStylesheet name="third/dist/css/skins/skin-#{utilMB.colorTemplate}.css"/>
         <h:outputStylesheet name="css/aquiles-core-#{utilMB.colorTemplate}.css"/>
 
