--- a/src/main/resources/META-INF/resources/aquiles/inputTextArea.xhtml
+++ b/src/main/resources/META-INF/resources/aquiles/inputTextArea.xhtml
@@ -25,7 +25,7 @@
                          shortDescription="rendered"/>
     <composite:attribute name="sRequired" default="false" type="boolean"
                          shortDescription="required"/>
-    <composite:attribute name="sRequiredMessage"
+    <composite:attribute name="sRequiredMessage" default="O campo #{cc.attrs.sLabel} é obrigatório"
                          shortDescription="requiredMessage"/>
     <composite:attribute name="sMaxlength" default="999999"
                          shortDescription="maxlength"/>
